3.6.11 - ???

3.6.10 - 11 January 2023

* 11883: Fixed order of labels for "Select play mode" and "Enter your name"
    steps in the Welcome Wizard
* 11879: NPE when cutting and pasting a GlobalPropertyFolder
* 11860: Warn when same piece is both Mat and Mat Cargo
* 11858: Clear all PieceSlot caches after loading extensions
* 11846: Protect from null property results during search
* 11823: NPE in GameRefresher when refreshing unnamed Decks
* 11813: NPE in PieceSlot.getLocalizedConfigureName()
* 11759: Do not allow negative number of Dice or Sides
* 11748: NPE when cutting and pasting a prototype folder
* 11455: Prevent NPE when adding empty KeyStrokes to list
* 11452: Prevent NPE if invalid file specified in img tag

3.6.9 - 14 December 2022

* 11825: BoundsTracker once again repaints entire maps, reverting 11521
* 11821: Include the AreaOfEffect bounds in the piece bounding box only if the
    AoE is visible
* 11814: Ensure that valid BasicName property is used to identify piece when
    no translation is available
* 11808: PieceCloner.clonePiece() should not expand inner pieces unconditionally
* 11806: NotesWindow re-open assigns focus properly to retain caret position
* 11805: Fixed NPE: tab.getTitleAt() can return null, so check for that
* 11804: Log element name on build exception, if available
* 11803: Report exceptions thrown while loading modules

3.6.8 - 29 November 2022

* 11798: Added Chinese translation
* 11796: Added Polish translation
* 11790: Updated bundled Java to 19 for Windows and MacOS
* 11778: System.setProperty() in BugDialog throws if the value is null
* 11727: Fixed incorrect properties file path, which prevents working on
    translations
* 11716: Dereference symbolic link to executable before attemping to find
    install dir
* 11704: Added Place Marker editor hotkeys
* 11700: Irregular Grid editor - add region with Insert or Ctrl+Right Click
* 11678: Prevent clearing the tile cache when a module is open